Correct link spacing on medium and above screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -125,6 +125,7 @@ main {
 
     #menu li {
         border-top: none;
+        margin-right: 1rem;
     }
 
     /*Main Content*/
